cabal-version:      2.4
name:               advent2021
version:            0.1.0.0
synopsis:
homepage:
license:            MIT
license-file:       LICENSE
author:             Mahdi Seyedan
maintainer:         mahdi.se@yahoo.com
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Utils
                    , Day1
                    , Day2
                    , Day2_2
                    , Day3
                    , Day4
                    , Day5
                    , Day6
                    , Day7
                    , Day8
                    , Day9
    build-depends:    base
                    , containers
                    , split
    hs-source-dirs:   src
    default-language: Haskell2010
